--- a/areas/empleo.html
+++ b/areas/empleo.html
@@ -313,6 +313,9 @@
                                             <a href="../index.html" class="">Inicio</a>
                                         </li>
                                         <li class="menu-item">
+                                            <a href="../index.html#features" class="">Áreas</a>
+                                        </li>
+                                        <li class="menu-item">
                                             <a class="" data-scroll href="#about-em">Empleo</a>
                                         </li>
                                         <li class="menu-item">
