--- a/areas/igualdadpm.html
+++ b/areas/igualdadpm.html
@@ -303,6 +303,9 @@
                                         <a href="../index.html" class="">Inicio</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a href="../index.html#features" class="">Áreas</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a class="" data-scroll href="#about-ipm">Igualdad</a>
                                     </li>
                                     <li class="menu-item">
