--- a/index.html
+++ b/index.html
@@ -338,13 +338,24 @@
                                                 <li class="menu-item">
                                                     <a class="" href="transparencia.html">Transparencia</a>
                                                 </li>
-                                                <li class="menu-item">
-                                                    <a href="#" id="search-menu-link" class="">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 8px;">
-                                                            <path d="M 19 3 C 13.488281 3 9 7.488281 9 13 C 9 15.394531 9.839844 17.589844 11.25 19.3125 L 3.28125 27.28125 L 4.71875 28.71875 L 12.6875 20.75 C 14.410156 22.160156 16.605469 23 19 23 C 24.511719 23 29 18.511719 29 13 C 29 7.488281 24.511719 3 19 3 Z M 19 5 C 23.429688 5 27 8.570313 27 13 C 27 17.429688 23.429688 21 19 21 C 14.570313 21 11 17.429688 11 13 C 11 8.570313 14.570313 5 19 5 Z"/>
-                                                        </svg>
-                                                        Buscar
-                                                    </a>
+                                                <li class="menu-item menu-search-item">
+                                                    <form id="mobile-search-form" class="mobile-search-form" role="search" aria-label="Buscar en el sitio">
+                                                        <div class="search-input-wrapper">
+                                                            <input
+                                                                type="search"
+                                                                id="mobile-search-input"
+                                                                class="mobile-search-input"
+                                                                placeholder="Buscar..."
+                                                                aria-label="Buscar en Coordicanarias"
+                                                                autocomplete="off"
+                                                                required>
+                                                            <button type="submit" class="mobile-search-button" aria-label="Buscar">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                                                                    <path d="M 19 3 C 13.488281 3 9 7.488281 9 13 C 9 15.394531 9.839844 17.589844 11.25 19.3125 L 3.28125 27.28125 L 4.71875 28.71875 L 12.6875 20.75 C 14.410156 22.160156 16.605469 23 19 23 C 24.511719 23 29 18.511719 29 13 C 29 7.488281 24.511719 3 19 3 Z M 19 5 C 23.429688 5 27 8.570313 27 13 C 27 17.429688 23.429688 21 19 21 C 14.570313 21 11 17.429688 11 13 C 11 8.570313 14.570313 5 19 5 Z"/>
+                                                                </svg>
+                                                            </button>
+                                                        </div>
+                                                    </form>
                                                 </li>
                                             </ul>
                                         </div>
@@ -1372,29 +1383,34 @@
                         </div>
                         <div class="col-sm-6 col-lg-4">
                             <h3>Formulario de contacto</h3>
-                            <form method="post">
+
+                            <!-- Mensaje de éxito/error -->
+                            <div id="form-message" class="form-message" style="display: none;"></div>
+
+                            <form method="post" action="php/enviar_correo.php" id="contact-form">
+                                <input type="hidden" name="area" value="inicio">
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="name1">Your Name:</label>
-                                            <input type="text" name="txtName" id="name1" class="form-control" placeholder="Type Full Name *" required />
+                                            <label for="name1">Tu nombre:</label>
+                                            <input type="text" name="txtName" id="name1" class="form-control" placeholder="Escribe tu nombre completo *" required />
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group">
-                                            <label for="email1">Your Email:</label>
-                                            <input type="email" name="txtEmail" id="email1" class="form-control" placeholder="Type Email ID *" required />
+                                            <label for="email1">Tu email:</label>
+                                            <input type="email" name="txtEmail" id="email1" class="form-control" placeholder="Escribe tu email *" required />
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="form-group">
-                                            <label for="msg1">Your Message:</label>
-                                            <textarea name="txtMsg" id="msg1" class="form-control" placeholder="Type Message *" style="width: 100%; height: 115px;" required></textarea>
+                                            <label for="msg1">Tu mensaje:</label>
+                                            <textarea name="txtMsg" id="msg1" class="form-control" placeholder="Escribe tu mensaje *" style="width: 100%; height: 115px;" required></textarea>
                                         </div>
                                         <div class="form-group">
-                                            <input type="submit" name="btnSubmit" class="btnContact" value="Send Message" />
+                                            <input type="submit" name="btnSubmit" class="btnContact" value="Enviar mensaje" />
                                         </div>
                                     </div>
                                 </div>
@@ -1471,6 +1487,26 @@
         </footer>
         <!--Footer end-->
     </div>
+
+    <!-- Banner de Cookies -->
+    <div id="cookie-banner" class="cookie-banner" role="dialog" aria-live="polite" aria-label="Aviso de cookies" aria-describedby="cookie-banner-description">
+        <div class="cookie-banner-content">
+            <div class="cookie-banner-text">
+                <p id="cookie-banner-description">
+                    Este sitio web utiliza cookies propias para mejorar su experiencia de navegación y recordar sus preferencias de accesibilidad.
+                    Al continuar navegando, acepta su uso.
+                    <a href="areas/politica-cookies.html" target="_blank" rel="noopener">Más información sobre cookies</a>
+                </p>
+            </div>
+            <div class="cookie-banner-buttons">
+                <button id="cookie-accept" class="cookie-btn cookie-accept" aria-label="Aceptar cookies">
+                    Aceptar
+                </button>
+            </div>
+        </div>
+    </div>
+    <!-- Fin Banner de Cookies -->
+
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/mixitup.min.js"></script>
